calculate pure tfidf

--- a/1_preprocessing/pure_tfidf.ipynb
+++ b/1_preprocessing/pure_tfidf.ipynb
@@ -317,9 +317,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "just                          \tScore: 5.685469036081594\n",
+      "like                          \tScore: 5.2984469808750605\n",
+      "lol                           \tScore: 4.587383186188959\n",
+      "love                          \tScore: 4.286749177572237\n",
+      "amp                           \tScore: 3.9058199930329986\n",
+      "today                         \tScore: 3.3187914735870656\n",
+      "day                           \tScore: 3.2738210791817735\n",
+      "know                          \tScore: 3.2018137103337794\n",
+      "time                          \tScore: 3.1326989603081317\n",
+      "good                          \tScore: 3.090346799601382\n",
+      "want                          \tScore: 2.9945847144213182\n",
+      "really                        \tScore: 2.978007858372382\n",
+      "people                        \tScore: 2.9406172374996915\n",
+      "new                           \tScore: 2.777738380030611\n",
+      "need                          \tScore: 2.5214689341832646\n",
+      "did                           \tScore: 2.49728598146299\n",
+      "great                         \tScore: 2.4605301123459173\n",
+      "think                         \tScore: 2.348187998141683\n",
+      "going                         \tScore: 2.346063868406257\n",
+      "got                           \tScore: 2.327797535059487\n",
+      "thank                         \tScore: 2.2893686648235603\n",
+      "thanks                        \tScore: 2.2399829757740237\n",
+      "week                          \tScore: 2.143130150798353\n",
+      "work                          \tScore: 2.040111306551651\n",
+      "happy                         \tScore: 2.0365884506624683\n",
+      "best                          \tScore: 1.9970393022048187\n",
+      "does                          \tScore: 1.9606124523099053\n",
+      "gemini                        \tScore: 1.9438425529381833\n",
+      "make                          \tScore: 1.9074571111531564\n",
+      "hate                          \tScore: 1.888099593841283\n",
+      "birthday                      \tScore: 1.8879698947703702\n",
+      "life                          \tScore: 1.8675143075594616\n",
+      "right                         \tScore: 1.8374432756617156\n",
+      "come                          \tScore: 1.7590468527896448\n",
+      "shit                          \tScore: 1.756721253906676\n",
+      "tomorrow                      \tScore: 1.7379638018702366\n",
+      "wait                          \tScore: 1.7303541056938152\n",
+      "home                          \tScore: 1.682112313171449\n",
+      "way                           \tScore: 1.6720603072489852\n",
+      "tonight                       \tScore: 1.667986933539711\n",
+      "feel                          \tScore: 1.667930098779358\n",
+      "night                         \tScore: 1.6566729039766461\n",
+      "let                           \tScore: 1.6471373792560169\n",
+      "follow                        \tScore: 1.636594761425337\n",
+      "girl                          \tScore: 1.5869897929275631\n",
+      "yes                           \tScore: 1.5794925655388155\n",
+      "sleep                         \tScore: 1.5106209870334766\n",
+      "little                        \tScore: 1.4829761074177996\n",
+      "look                          \tScore: 1.462548713998759\n",
+      "free                          \tScore: 1.4589305414809952\n",
+      "thing                         \tScore: 1.3982329443917052\n",
+      "school                        \tScore: 1.385776996189715\n",
+      "watch                         \tScore: 1.3814578644476054\n",
+      "weekend                       \tScore: 1.3698389273753506\n",
+      "miss                          \tScore: 1.3665033675468767\n",
+      "say                           \tScore: 1.3507631342661335\n",
+      "wanna                         \tScore: 1.3460602518832383\n",
+      "better                        \tScore: 1.3352735125930482\n",
+      "hope                          \tScore: 1.2934022449095262\n",
+      "days                          \tScore: 1.2881939238222937\n",
+      "friends                       \tScore: 1.28729294391631\n",
+      "bad                           \tScore: 1.2832121855461567\n",
+      "god                           \tScore: 1.2811766048395725\n",
+      "year                          \tScore: 1.2524998287802658\n",
+      "big                           \tScore: 1.2294613902485607\n",
+      "bitch                         \tScore: 1.2216628741362647\n",
+      "long                          \tScore: 1.2214622356909985\n",
+      "tell                          \tScore: 1.2173512745963253\n",
+      "sure                          \tScore: 1.2135147671177648\n",
+      "haha                          \tScore: 1.2129726247266122\n",
+      "man                           \tScore: 1.1860278735470187\n",
+      "awesome                       \tScore: 1.1854397618514647\n",
+      "morning                       \tScore: 1.167248728535061\n",
+      "gonna                         \tScore: 1.1634271858709462\n",
+      "twitter                       \tScore: 1.1603429364204711\n",
+      "looking                       \tScore: 1.1568088616450047\n",
+      "actually                      \tScore: 1.1555041484779713\n",
+      "amazing                       \tScore: 1.1395877013266713\n",
+      "yeah                          \tScore: 1.128362208059067\n",
+      "wish                          \tScore: 1.1124721387611676\n",
+      "game                          \tScore: 1.104386514161995\n",
+      "fucking                       \tScore: 1.097963375613049\n",
+      "trying                        \tScore: 1.0918356418802215\n",
+      "beautiful                     \tScore: 1.0880681117852748\n",
+      "away                          \tScore: 1.072510235007642\n",
+      "bae                           \tScore: 1.0667887616268328\n",
+      "family                        \tScore: 1.0619635479164695\n",
+      "vote                          \tScore: 1.0607887800070495\n",
+      "house                         \tScore: 1.0379302258777512\n",
+      "getting                       \tScore: 1.0359174896270988\n",
+      "makes                         \tScore: 1.032646696033379\n",
+      "guys                          \tScore: 1.0318861981769296\n",
+      "proud                         \tScore: 1.0274078217482827\n",
+      "said                          \tScore: 1.0241988858723814\n",
+      "omg                           \tScore: 1.021729559443191\n",
+      "maybe                         \tScore: 1.0197265593796052\n",
+      "fuck                          \tScore: 1.019331897284772\n",
+      "team                          \tScore: 1.0141172686239432\n",
+      "vine                          \tScore: 1.0038686729597759\n",
+      "try                           \tScore: 0.9980068244887278\n"
+     ]
+    }
+   ],
    "source": [
     "vectorizer = create_vectorizer()\n",
     "tfidf_result = vectorizer.fit_transform(base_texts)\n",
@@ -327,114 +434,121 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TF-IDF (Group)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "just\tScore: 11.840374598781692\n",
-      "like\tScore: 10.607918209544875\n",
-      "love\tScore: 8.880044430846423\n",
-      "know\tScore: 6.1386632056295465\n",
-      "people\tScore: 5.629592469063686\n",
-      "good\tScore: 5.379822587056073\n",
-      "want\tScore: 5.0014382279572915\n",
-      "lol\tScore: 4.928931735236844\n",
-      "really\tScore: 4.877489629624206\n",
-      "thank\tScore: 4.807460065074168\n",
-      "did\tScore: 4.625035564589052\n",
-      "time\tScore: 4.2031384705488515\n",
-      "day\tScore: 4.138166454199505\n",
-      "life\tScore: 3.9296632391972786\n",
-      "shit\tScore: 3.9187086575962486\n",
-      "think\tScore: 3.917392572752902\n",
-      "need\tScore: 3.852857772689931\n",
-      "fuck\tScore: 3.8224055026734045\n",
-      "got\tScore: 3.82235950693848\n",
-      "feel\tScore: 3.79873739989057\n",
-      "fucking\tScore: 3.436510966122875\n",
-      "going\tScore: 3.40276453896224\n",
-      "lmao\tScore: 3.289144765521493\n",
-      "today\tScore: 3.2481035674521115\n",
-      "right\tScore: 3.017475984781202\n",
-      "happy\tScore: 2.9953806994163465\n",
-      "make\tScore: 2.874211104494928\n",
-      "new\tScore: 2.7849080872323224\n",
-      "gonna\tScore: 2.7819650033052223\n",
-      "yes\tScore: 2.779388133945607\n",
-      "does\tScore: 2.7727102769064693\n",
-      "way\tScore: 2.5995805076327834\n",
-      "hate\tScore: 2.484146192984082\n",
-      "look\tScore: 2.4808801577571526\n",
-      "omg\tScore: 2.4517563294062685\n",
-      "thanks\tScore: 2.352921620227819\n",
-      "work\tScore: 2.342073222229434\n",
-      "let\tScore: 2.339354918762453\n",
-      "better\tScore: 2.3311082311467834\n",
-      "hope\tScore: 2.3203608604054926\n",
-      "say\tScore: 2.23114533433462\n",
-      "best\tScore: 2.2169836069216418\n",
-      "yeah\tScore: 2.1349525445612123\n",
-      "friends\tScore: 2.1314171107725395\n",
-      "man\tScore: 2.1049855414347225\n",
-      "okay\tScore: 2.068174761602357\n",
-      "bad\tScore: 2.0648820918244866\n",
-      "great\tScore: 2.0575104553973893\n",
-      "stop\tScore: 2.046182823886757\n",
-      "come\tScore: 2.0217323990989735\n",
-      "said\tScore: 2.021349080081113\n",
-      "thing\tScore: 2.0072976868107117\n",
-      "things\tScore: 1.976340350111654\n",
-      "god\tScore: 1.9671889026279326\n",
-      "morning\tScore: 1.9540616045780062\n",
-      "night\tScore: 1.9348772225508353\n",
-      "wanna\tScore: 1.9284672593742826\n",
-      "girl\tScore: 1.9081693576626053\n",
-      "beautiful\tScore: 1.8910465510966474\n",
-      "literally\tScore: 1.8326832784272424\n",
-      "actually\tScore: 1.8270989663975916\n",
-      "ass\tScore: 1.8156412609773942\n",
-      "tell\tScore: 1.8017627880732516\n",
-      "wish\tScore: 1.7855798843287158\n",
-      "getting\tScore: 1.7355191536178396\n",
-      "sorry\tScore: 1.714559830882087\n",
-      "doing\tScore: 1.6934921734510517\n",
-      "guys\tScore: 1.666792605102962\n",
-      "friend\tScore: 1.6657180651962928\n",
-      "amazing\tScore: 1.6641270422191987\n",
-      "sleep\tScore: 1.6637648325520518\n",
-      "little\tScore: 1.6606995413873118\n",
-      "haha\tScore: 1.6560037593286687\n",
-      "sure\tScore: 1.6461622034479184\n",
-      "trying\tScore: 1.6407353232100563\n",
-      "help\tScore: 1.6164970325461718\n",
-      "don\tScore: 1.6062051991203725\n",
-      "person\tScore: 1.600986849625185\n",
-      "wow\tScore: 1.5632342366568819\n",
-      "birthday\tScore: 1.5544648716026401\n",
-      "thoughught\tScore: 1.5533665583397838\n",
-      "makes\tScore: 1.5500900086265081\n",
-      "twitter\tScore: 1.5435166587561702\n",
-      "miss\tScore: 1.5287651902504087\n",
-      "wait\tScore: 1.523751520832199\n",
-      "away\tScore: 1.5114397684297982\n",
-      "days\tScore: 1.5033517012909154\n",
-      "home\tScore: 1.494619891823564\n",
-      "hard\tScore: 1.4921286115947767\n",
-      "lot\tScore: 1.4816735967379804\n",
-      "talk\tScore: 1.470454793402028\n",
-      "honestly\tScore: 1.4643558527783833\n",
-      "live\tScore: 1.462733440725092\n",
-      "week\tScore: 1.4593245123348317\n",
-      "mom\tScore: 1.4331987380255509\n",
-      "ako\tScore: 1.4326252579366432\n",
-      "mean\tScore: 1.4268613004992543\n",
-      "follow\tScore: 1.4249102270129865\n",
-      "years\tScore: 1.4206335186735495\n",
-      "having\tScore: 1.4198785631377666\n"
+      "just                          \tScore: 11.840374598781692\n",
+      "like                          \tScore: 10.607918209544875\n",
+      "love                          \tScore: 8.880044430846423\n",
+      "know                          \tScore: 6.1386632056295465\n",
+      "people                        \tScore: 5.629592469063686\n",
+      "good                          \tScore: 5.379822587056073\n",
+      "want                          \tScore: 5.0014382279572915\n",
+      "lol                           \tScore: 4.928931735236844\n",
+      "really                        \tScore: 4.877489629624206\n",
+      "thank                         \tScore: 4.807460065074168\n",
+      "did                           \tScore: 4.625035564589052\n",
+      "time                          \tScore: 4.2031384705488515\n",
+      "day                           \tScore: 4.138166454199505\n",
+      "life                          \tScore: 3.9296632391972786\n",
+      "shit                          \tScore: 3.9187086575962486\n",
+      "think                         \tScore: 3.917392572752902\n",
+      "need                          \tScore: 3.852857772689931\n",
+      "fuck                          \tScore: 3.8224055026734045\n",
+      "got                           \tScore: 3.82235950693848\n",
+      "feel                          \tScore: 3.79873739989057\n",
+      "fucking                       \tScore: 3.436510966122875\n",
+      "going                         \tScore: 3.40276453896224\n",
+      "lmao                          \tScore: 3.289144765521493\n",
+      "today                         \tScore: 3.2481035674521115\n",
+      "right                         \tScore: 3.017475984781202\n",
+      "happy                         \tScore: 2.9953806994163465\n",
+      "make                          \tScore: 2.874211104494928\n",
+      "new                           \tScore: 2.7849080872323224\n",
+      "gonna                         \tScore: 2.7819650033052223\n",
+      "yes                           \tScore: 2.779388133945607\n",
+      "does                          \tScore: 2.7727102769064693\n",
+      "way                           \tScore: 2.5995805076327834\n",
+      "hate                          \tScore: 2.484146192984082\n",
+      "look                          \tScore: 2.4808801577571526\n",
+      "omg                           \tScore: 2.4517563294062685\n",
+      "thanks                        \tScore: 2.352921620227819\n",
+      "work                          \tScore: 2.342073222229434\n",
+      "let                           \tScore: 2.339354918762453\n",
+      "better                        \tScore: 2.3311082311467834\n",
+      "hope                          \tScore: 2.3203608604054926\n",
+      "say                           \tScore: 2.23114533433462\n",
+      "best                          \tScore: 2.2169836069216418\n",
+      "yeah                          \tScore: 2.1349525445612123\n",
+      "friends                       \tScore: 2.1314171107725395\n",
+      "man                           \tScore: 2.1049855414347225\n",
+      "okay                          \tScore: 2.068174761602357\n",
+      "bad                           \tScore: 2.0648820918244866\n",
+      "great                         \tScore: 2.0575104553973893\n",
+      "stop                          \tScore: 2.046182823886757\n",
+      "come                          \tScore: 2.0217323990989735\n",
+      "said                          \tScore: 2.021349080081113\n",
+      "thing                         \tScore: 2.0072976868107117\n",
+      "things                        \tScore: 1.976340350111654\n",
+      "god                           \tScore: 1.9671889026279326\n",
+      "morning                       \tScore: 1.9540616045780062\n",
+      "night                         \tScore: 1.9348772225508353\n",
+      "wanna                         \tScore: 1.9284672593742826\n",
+      "girl                          \tScore: 1.9081693576626053\n",
+      "beautiful                     \tScore: 1.8910465510966474\n",
+      "literally                     \tScore: 1.8326832784272424\n",
+      "actually                      \tScore: 1.8270989663975916\n",
+      "ass                           \tScore: 1.8156412609773942\n",
+      "tell                          \tScore: 1.8017627880732516\n",
+      "wish                          \tScore: 1.7855798843287158\n",
+      "getting                       \tScore: 1.7355191536178396\n",
+      "sorry                         \tScore: 1.714559830882087\n",
+      "doing                         \tScore: 1.6934921734510517\n",
+      "guys                          \tScore: 1.666792605102962\n",
+      "friend                        \tScore: 1.6657180651962928\n",
+      "amazing                       \tScore: 1.6641270422191987\n",
+      "sleep                         \tScore: 1.6637648325520518\n",
+      "little                        \tScore: 1.6606995413873118\n",
+      "haha                          \tScore: 1.6560037593286687\n",
+      "sure                          \tScore: 1.6461622034479184\n",
+      "trying                        \tScore: 1.6407353232100563\n",
+      "help                          \tScore: 1.6164970325461718\n",
+      "don                           \tScore: 1.6062051991203725\n",
+      "person                        \tScore: 1.600986849625185\n",
+      "wow                           \tScore: 1.5632342366568819\n",
+      "birthday                      \tScore: 1.5544648716026401\n",
+      "thoughught                    \tScore: 1.5533665583397838\n",
+      "makes                         \tScore: 1.5500900086265081\n",
+      "twitter                       \tScore: 1.5435166587561702\n",
+      "miss                          \tScore: 1.5287651902504087\n",
+      "wait                          \tScore: 1.523751520832199\n",
+      "away                          \tScore: 1.5114397684297982\n",
+      "days                          \tScore: 1.5033517012909154\n",
+      "home                          \tScore: 1.494619891823564\n",
+      "hard                          \tScore: 1.4921286115947767\n",
+      "lot                           \tScore: 1.4816735967379804\n",
+      "talk                          \tScore: 1.470454793402028\n",
+      "honestly                      \tScore: 1.4643558527783833\n",
+      "live                          \tScore: 1.462733440725092\n",
+      "week                          \tScore: 1.4593245123348317\n",
+      "mom                           \tScore: 1.4331987380255509\n",
+      "ako                           \tScore: 1.4326252579366432\n",
+      "mean                          \tScore: 1.4268613004992543\n",
+      "follow                        \tScore: 1.4249102270129865\n",
+      "years                         \tScore: 1.4206335186735495\n",
+      "having                        \tScore: 1.4198785631377666\n"
      ]
     }
    ],
