finish comparison tfidf between two groups

--- a/1_preprocessing/pure_tfidf.ipynb
+++ b/1_preprocessing/pure_tfidf.ipynb
@@ -84,6 +84,7 @@
     "    txt = re.sub(r\"can\\'t\", 'can not', txt)\n",
     "    txt = re.sub(r\"couldn\\'t\", 'could not', txt)\n",
     "    txt = re.sub(r\"wouldn\\'t\", 'would not', txt)\n",
+    "    txt = re.sub(r\"shouldn\\'t\", 'should not', txt)\n",
     "#     txt = re.sub(r\"\\S+\\'ll\", '{0} will'.format(txt[0:-3]), txt)\n",
     "#     txt = re.sub(r\"\\S+\\'ve\", '{0} have'.format(txt[0:-3]), txt)\n",
     "    return txt"
@@ -131,7 +132,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "base_texts = []\n",
@@ -149,7 +152,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def create_vectorizer():\n",
@@ -160,7 +165,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def display_scores(vectorizer, tfidf_result):\n",
