--- a/1_preprocessing/user_analysis_v2.ipynb
+++ b/1_preprocessing/user_analysis_v2.ipynb
@@ -68,13 +68,23 @@
     "    txt = re.sub(r\"#\\S+\", '', txt)\n",
     "    txt = re.sub(r\"idk\", 'i do not know', txt)   # idk: i don't know\n",
     "    txt = re.sub(r\"tho\", 'though', txt)   # tho\n",
+    "    txt = re.sub(r\"i\\'m\", 'i am', txt)\n",
+    "    txt = re.sub(r\"you\\'re\", 'you are', txt)\n",
+    "    txt = re.sub(r\"he\\'s\", 'he is', txt)\n",
+    "    txt = re.sub(r\"she\\'s\", 'she is', txt)\n",
+    "    txt = re.sub(r\"it\\'s\", 'it is', txt)\n",
+    "    txt = re.sub(r\"we\\'re\", 'we are', txt)\n",
+    "    txt = re.sub(r\"they\\'re\", 'they are', txt)\n",
+    "    txt = re.sub(r\"isn\\'t\", 'is not', txt)\n",
     "    txt = re.sub(r\"don\\'t\", 'do not', txt)\n",
     "    txt = re.sub(r\"doesn\\'t\", 'does not', txt)\n",
     "    txt = re.sub(r\"didn\\'t\", 'did not', txt)\n",
     "    txt = re.sub(r\"wasn\\'t\", 'was not', txt)\n",
     "    txt = re.sub(r\"weren\\'t\", 'were not', txt)\n",
     "    txt = re.sub(r\"can\\'t\", 'can not', txt)\n",
-    "    txt = re.sub(r\"\\S+\\'ll\", '{0} will'.format(txt[0:-3]), txt)\n",
+    "    txt = re.sub(r\"couldn\\'t\", 'could not', txt)\n",
+    "    txt = re.sub(r\"wouldn\\'t\", 'would not', txt)\n",
+    "    txt = re.sub(r\"shouldn\\'t\", 'should not', txt)\n",
     "#     txt = re.sub(r\"\\S+\\'ve\", '{0} have'.format(txt[0:-3]), txt)\n",
     "    return txt"
    ]
@@ -304,6 +314,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
