find stopwords category

--- a/1_preprocessing/ensamble_tfidf.ipynb
+++ b/1_preprocessing/ensamble_tfidf.ipynb
@@ -457,12 +457,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "89"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(group_texts)"
+   ]
   },
   {
    "cell_type": "code",
