--- a/1_preprocessing/ensamble_tfidf.ipynb
+++ b/1_preprocessing/ensamble_tfidf.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import re, math\n",
@@ -290,7 +292,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open('top100_correspond', 'w') as open_file:\n",
@@ -323,7 +327,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open('top100_correspond') as open_file:\n",
