sameple tweets by day

--- a/1_preprocessing/ensamble_tfidf.ipynb
+++ b/1_preprocessing/ensamble_tfidf.ipynb
@@ -493,7 +493,9 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open('top100_correspond20170911_2') as open_file:\n",
