rewrote code of class 'Patient'

--- a/1_preprocessing/tfidf_new_version.ipynb
+++ b/1_preprocessing/tfidf_new_version.ipynb
@@ -649,7 +649,9 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
