modify comments for easily understanding

--- a/2_feature/energy_calculation.ipynb
+++ b/2_feature/energy_calculation.ipynb
@@ -8,6 +8,7 @@
    },
    "outputs": [],
    "source": [
+    "### Construct the phonetic dictionary\n",
     "eSPEDictV2 = dict()\n",
     "with open('eSPEPhonologicalTableV2') as openFile:\n",
     "    for line in openFile.readlines():\n",
@@ -23,6 +24,7 @@
    },
    "outputs": [],
    "source": [
+    "### Calculate energy of score (8 classes + 1 class:#(words))\n",
     "def getTweetScoreV2(tweet):\n",
     "    wordCount = 0\n",
     "    words = tokenize(tweet)\n",
@@ -57,6 +59,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# For Patient Classification"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -64,7 +73,7 @@
    },
    "outputs": [],
    "source": [
-    "### Patient\n",
+    "# Patient\n",
     "progress = initializeProgressBar(len(groupTextCase1))\t\n",
     "groupScoresV2 = []\n",
     "for i, person in enumerate(groupTextCase1):\t# Type of groupTextCase1: List\n",
