modify comments for easily understanding

--- a/2_feature/energy_calculation.ipynb
+++ b/2_feature/energy_calculation.ipynb
@@ -1,19 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "### Construct the phonetic dictionary\n",
-    "eSPEDictV2 = dict()\n",
-    "with open('eSPEPhonologicalTableV2') as openFile:\n",
-    "    for line in openFile.readlines():\n",
-    "        line = line.strip().split('\\t')\n",
-    "        eSPEDictV2[line[0]] = np.array([eval(x) for x in line[1:]])"
+    "# Construct the phonetic dictionary"
    ]
   },
   {
@@ -24,7 +15,29 @@
    },
    "outputs": [],
    "source": [
-    "### Calculate energy of score (8 classes + 1 class:#(words))\n",
+    "eSPEDictV2 = dict()\n",
+    "with open('eSPEPhonologicalTableV2') as openFile:\n",
+    "    for line in openFile.readlines():\n",
+    "        line = line.strip().split('\\t')\n",
+    "        eSPEDictV2[line[0]] = np.array([eval(x) for x in line[1:]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculate energy of score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### (8 classes + 1 class:#(words))\n",
     "def getTweetScoreV2(tweet):\n",
     "    wordCount = 0\n",
     "    words = tokenize(tweet)\n",
